# vesta

./: .cursorrules  .gitignore  .releaserc  CHANGELOG.md  Cargo.toml  README.md  add_shortcuts.py  patch_auto_sync.py  run_gui.sh  vesta.desktop  vesta.sln
.github/: copilot-instructions.md  funding.yml
.github/workflows/: aur-publish.yml  bindgen-drift-check.yml  build.yml  cache-cleanup.yml  ci.yml  release.yml  warm-release-cache.yml  whisper-bench.yml
Test_Subs/: serialize.py
Test_Subs/FILM/: Detour-en.srt  Detour-it.srt  Good.Will.Hunting-en.srt  Good.Will.Hunting-it.srt  In.Bruges-en.srt  In.Bruges-it.srt  Interstellar-en.srt  Interstellar-it.srt  Snatch-en.srt  Snatch-it.srt  Trainspotting-en.srt  Trainspotting-it.srt  Uncut Gems-en.srt  Uncut Gems-it.srt  Zootopia-en.srt  Zootopia-it.srt  download_detour.sh
Test_Subs/SERIE_TV/: Detour-en_parte1.srt  Detour-en_parte1.synced.srt  Detour-en_parte2.srt  Detour-en_parte3.srt  Detour-it_parte1.srt  Detour-it_parte2.srt  Detour-it_parte3.srt  make_detour_parts.sh
Test_Subs/fixtures/: clip_01_en.srt  clip_01_it.srt  clip_02_en.srt  clip_02_it.srt  clip_03_en.srt  clip_03_it.srt  clip_04_en.srt  clip_04_it.srt  clip_05_en.srt  clip_05_it.srt
Test_Subs/fixtures/detour/: detour_clip_90s_en.srt  detour_clip_90s_it.srt  golden_detour_film.tsv
apps/srt-gui/: fix_missing_skip.py  index.html  levenshtein_test.rs  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/srt-gui/reports/: missing_translations_report.json
apps/srt-gui/scripts/: check-i18n.mjs  check_missing_translations.py  merge_translations.py  split_translations.py  translate_align.py
apps/srt-gui/src/: App.svelte  app.css  main.ts
apps/srt-gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/srt-gui/src-tauri/capabilities/: default.json
apps/srt-gui/src-tauri/icons/: icon.icns
apps/srt-gui/src-tauri/src/: lib.rs  main.rs  state.rs
apps/srt-gui/src-tauri/src/commands/: auto_sync.rs  config.rs  experimental.rs  info.rs  mod.rs  net.rs  refine.rs  sync.rs  transcribe.rs  translate.rs
apps/srt-gui/src-tauri/src/commands/flashcards/: commands.rs  export_apkg.rs  export_tsv.rs  filters.rs  matcher.rs  media.rs  mod.rs  parser.rs  types.rs
apps/srt-gui/src-tauri/tests/: flashcard_regression.rs
apps/srt-gui/src/lib/: AddApiKeyModal.svelte  AlignTab.svelte  AlignTabNew.svelte  AlignTabOld.svelte  AnkiSettingsPanel.svelte  ApiKeysCard.svelte  AppContextMenu.svelte  AudioClipsPanel.svelte  AutoSyncControls.svelte  AutoSyncOverlay.svelte  CardFiltersPanel.svelte  CodeEditor.svelte  DeckNamingPanel.svelte  EpisodeContextMenu.svelte  EpisodeMediaSettingsModal.svelte  EpisodeTable.svelte  ExperimentalTab.svelte  FilesOutputPanel.svelte  FilesPanel.svelte  FlashcardsPreviewModal.svelte  FlashcardsTab.svelte  GenerationResultPanel.svelte  GenerationStatusDisplay.svelte  InfoButton.svelte  InfoModal.svelte  LogPanel.svelte  NotificationsTab.svelte  OverviewSettingsPanel.svelte  PathPickerField.svelte  PathPreviewModal.svelte  ProviderIcon.svelte  RefineTab.svelte  RefineTabNew.svelte  RefineTabOld.svelte  SearchableSelect.svelte  SettingsTab.svelte  ShortcutOverlay.svelte  ShortcutsTab.svelte  Sidebar.svelte  (+49 more)
apps/whisper-bench/: README.md
apps/whisper-bench/src-tauri/: Cargo.toml  tauri.conf.json
apps/whisper-bench/src-tauri/capabilities/: default.json
apps/whisper-bench/src-tauri/icons/: icon.icns
apps/whisper-bench/src-tauri/src/: hardware.rs  main.rs  sample.rs  workers.rs
apps/whisper-bench/ui/: index.html
benchmarking_against_subs2srs/: .gitignore  1_compile_subs2srs.sh  2_compile_vesta.sh  3_run_benchmarks.sh  4_generate_report.sh  README.md  benchmarks_result.csv  config.sh
benchmarking_against_subs2srs/lib/: common.sh
benchmarking_against_whisper_subs/: .gitignore  1_setup.sh  2_run_benchmark.sh  README.md  config.sh
benchmarking_against_whisper_subs/report/: score.py
benchmarks/: 1_compile_subs2srs.sh  3_run_benchmarks.sh  4_generate_report.sh  README.md  config.sh
benchmarks/lib/: common.sh
benchmarks/report/: plot.py
benchmarks/subs2srs-headless/: Program.cs  Stubs.cs
build-scripts/: .SRCINFO  PKGBUILD  check_internal_crate_versions.sh  ci-push-aur.sh  com.vesta.desktop.desktop  extract-release-notes.sh  git-release.sh  install-hooks.sh  pre-push  push-aur.sh  update_project_info.sh
cli/srt-autosync-cli/: Cargo.toml
cli/srt-autosync-cli/src/: main.rs
cli/srt-extract-cli/: Cargo.toml
cli/srt-extract-cli/src/: main.rs
cli/srt-flashcards-cli/: Cargo.toml  README.md
cli/srt-flashcards-cli/src/: main.rs
cli/srt-transcribe-cli/: Cargo.toml
cli/srt-transcribe-cli/src/: main.rs
cli/srt-translate-cli/: Cargo.toml  README.md
cli/srt-translate-cli/src/: main.rs
core/srt-parser/: Cargo.toml
core/srt-parser/src/: encoding.rs  lib.rs
docs/: ARCHITECTURE.md  README.md  list_of_things_changed.md  release-notes.md
docs/modules/: README.md  srt-autosync.md  srt-extract.md  srt-flashcards.md  srt-parser.md  srt-refine.md  srt-sync.md  srt-transcribe.md  srt-translate.md
lib/srt-ankiconnect/: Cargo.toml
lib/srt-ankiconnect/src/: lib.rs
lib/srt-autosync/: Cargo.toml
lib/srt-autosync/src/: lib.rs
lib/srt-condense/: Cargo.toml
lib/srt-condense/src/: lib.rs
lib/srt-extract/: Cargo.toml
lib/srt-extract/src/: lib.rs
lib/srt-flashcards/: Cargo.toml  README.md
lib/srt-flashcards/src/: export_apkg.rs  export_tsv.rs  filters.rs  lib.rs  matcher.rs  media.rs  parser.rs  types.rs
lib/srt-flashcards/tests/: detour_golden.rs  pipeline.rs
lib/srt-refine/: Cargo.toml
lib/srt-refine/src/: engine.rs  lib.rs
lib/srt-sync/: Cargo.toml
lib/srt-sync/src/: engine.rs  interpolator.rs  lib.rs  matching.rs  playback.rs  sampler.rs
lib/srt-transcribe/: Cargo.toml
lib/srt-transcribe/src/: audio.rs  cloud.rs  lib.rs  model.rs  pipeline.rs  transcribe.rs
lib/srt-translate/: Cargo.toml
lib/srt-translate/src/: language_info.rs  lib.rs  pool.rs  prompts.rs  rate_limiter.rs  translator.rs
lib/whisper-common/: Cargo.toml
lib/whisper-common/src/: audio.rs  cloud.rs  lib.rs  transcribe.rs
(+397 files in other folders)
