[workspace]
resolver = "2"
members = [
    "core/*",
    "lib/*",
    "cli/*",
    "apps/srt-gui/src-tauri",
]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "form", "rustls"] }
dirs = "6"
hound = "3"
tempfile = "3"
whisper-rs = "0.16"
futures = "0.3"

# Internal crates
srt-parser = { path = "./core/srt-parser", version = "0.10.0" }
srt-extract = { path = "./lib/srt-extract", version = "0.10.0" }
srt-translate = { path = "./lib/srt-translate", version = "0.10.0" }
srt-sync = { path = "./lib/srt-sync", version = "0.10.0" }
whisper-common = { path = "./lib/whisper-common", version = "0.10.0" }

[profile.dev]
opt-level = 0
debug = 0
strip = "debuginfo"

[profile.dev.package."*"]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[patch.crates-io]
whisper-rs-sys = { path = "vendor/whisper-rs-sys-0.15.0" }
