[workspace]
resolver = "3"
members = [
    "core/*",
    "lib/*",
    "cli/*",
    "apps/srt-gui/src-tauri",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "form", "rustls"] }
dirs = "6"
hound = "3"
tempfile = "3"
whisper-rs = "0.16"
num_cpus = "1.16"
futures = "0.3"
encoding_rs = "0.8"
chardetng = "1"

# Internal crates
srt-parser = { path = "./core/srt-parser", version = "0.14.2" }
srt-extract = { path = "./lib/srt-extract", version = "0.14.2" }
srt-translate = { path = "./lib/srt-translate", version = "0.14.2" }
srt-sync = { path = "./lib/srt-sync", version = "0.14.2" }
srt-autosync = { path = "./lib/srt-autosync", version = "0.14.2" }
srt-flashcards = { path = "./lib/srt-flashcards", version = "0.14.2" }
srt-refine = { path = "./lib/srt-refine", version = "0.14.2" }
srt-transcribe = { path = "./lib/srt-transcribe", version = "0.14.2" }
srt-condense = { path = "./lib/srt-condense", version = "0.14.2" }
srt-ankiconnect = { path = "./lib/srt-ankiconnect", version = "0.14.2" }

[profile.dev]
opt-level = 0
debug = 0
strip = "debuginfo"

[profile.dev.package."*"]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
panic = "abort"

[patch.crates-io]
whisper-rs-sys = { path = "vendor/whisper-rs-sys-0.15.0" }
