[package]
name = "srt-extract-cli"
version = "0.14.1-dev.4"
edition.workspace = true
description = "CLI tool for extracting and formatting SRT subtitle data"
authors = ["Your Name <your.email@example.com>"]
license = "GPL-3.0"
repository = "https://github.com/pierspad/vesta"
readme = "README.md"

[[bin]]
name = "srt-extract"
path = "src/main.rs"

[dependencies]
srt-parser = { workspace = true }
srt-extract = { workspace = true }
anyhow.workspace = true
clap.workspace = true
