[package]
name = "srt-transcribe-cli"
version = "0.16.0"
edition.workspace = true
description = "Headless command-line front-end for the srt-transcribe pipeline (media → SRT via whisper.cpp or cloud providers)."
authors = ["Pierpaolo Spadafora <pierpaolospadafora@proton.me>"]
license = "GPL-3.0-only"

[[bin]]
name = "srt-transcribe"
path = "src/main.rs"

[dependencies]
srt-transcribe = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
anyhow = { workspace = true }

[features]
vulkan = ["srt-transcribe/vulkan"]
