[package]
name = "srt-translate-cli"
version = "0.14.3"
edition.workspace = true
description = "CLI tool for translating SRT subtitle files using LLM APIs"
authors = ["Your Name <your.email@example.com>"]
license = "GPL-3.0"
repository = "https://github.com/pierspad/vesta"
readme = "README.md"

[[bin]]
name = "srt-translate"
path = "src/main.rs"

[dependencies]
srt-parser = { workspace = true }
srt-translate = { workspace = true }
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tokio-util = "0.7"
dotenvy = "0.15"
toml = "1.1"
serde.workspace = true
regex = "1"
