[package]
name = "srt-parser"
version = "0.14.1"
edition.workspace = true
authors = ["Your Name <your.email@example.com>"]
description = "Fast and reliable SRT (SubRip) subtitle file parser"
license = "GPL-3.0"
repository = "https://github.com/pierspad/vesta"
keywords = ["srt", "subtitles", "parser", "subrip"]
categories = ["multimedia", "parser-implementations"]
readme = "README.md"

[dependencies]
anyhow.workspace = true
serde.workspace = true
encoding_rs.workspace = true
chardetng.workspace = true

[lib]
name = "srt_parser"
path = "src/lib.rs"
