[package]
name = "srt-extract"
version = "0.6.1"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Library for extracting and formatting SRT subtitle data"
license = "GPL-3.0"
repository = "https://github.com/pierspad/auto_sub_srt"
keywords = ["srt", "subtitles", "extract", "format"]
categories = ["multimedia", "parser-implementations"]

[dependencies]
srt-parser = { workspace = true }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[lib]
name = "srt_extract"
path = "src/lib.rs"
