[package]
name = "srt-extract"
version = "0.14.0-dev.2"
edition.workspace = true
authors = ["Your Name <your.email@example.com>"]
description = "Library for extracting and formatting SRT subtitle data"
license = "GPL-3.0"
repository = "https://github.com/pierspad/vesta"
keywords = ["srt", "subtitles", "extract", "format"]
categories = ["multimedia", "parser-implementations"]

[dependencies]
srt-parser = { workspace = true }
anyhow.workspace = true
serde_json.workspace = true

[lib]
name = "srt_extract"
path = "src/lib.rs"
