[package]
name = "srt-flashcards"
version = "0.10.0"
edition = "2021"
description = "Headless, Tauri-free engine that turns subtitle pairs + media into Anki flashcards (TSV / APKG)."
authors = ["Pierpaolo Spadafora <pierpaolospadafora@proton.me>"]
license = "GPL-3.0-only"

[lib]
name = "srt_flashcards"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
tempfile = { workspace = true }
rusqlite = { version = "0.39", features = ["bundled"] }
sha1_smol = "1.0"
zip = "8"
