[package]
name = "srt-flashcards"
version = "0.14.1-dev.4"
edition.workspace = true
description = "Headless, Tauri-free engine that turns subtitle pairs + media into Anki flashcards (TSV / APKG)."
authors = ["Pierpaolo Spadafora <pierpaolospadafora@proton.me>"]
license = "GPL-3.0-only"

[lib]
name = "srt_flashcards"

[dependencies]
anyhow = { workspace = true }
srt-parser = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
tempfile = { workspace = true }
rusqlite = { version = "0.40", features = ["bundled"] }
sha1_smol = "1.0"
zip = "8"
