[package]
name = "srt-refine"
version = "0.14.1-dev.2"
edition.workspace = true
authors = ["Pierpaolo Spadafora <pierpaolospadafora@proton.me>"]
description = "Headless engine to load Anki decks (TSV / APKG), enrich card notes via LLM prompts and save them back — the refinement step of the Vesta pipeline."
license = "GPL-3.0-only"
repository = "https://github.com/pierspad/vesta"
keywords = ["anki", "flashcards", "apkg", "llm", "srt"]
categories = ["multimedia"]

[lib]
name = "srt_refine"
path = "src/lib.rs"

[dependencies]
srt-translate = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true }
tokio-util = "0.7"
rusqlite = { version = "0.40", features = ["bundled"] }
zip = "8"
sha1_smol = "1.0"
tempfile.workspace = true
