[package]
name = "srt-sync"
version = "0.6.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Library for synchronizing SRT subtitles with video using anchor points and interpolation"
license = "GPL-3.0"
repository = "https://github.com/pierspad/auto_sub_srt"
keywords = ["srt", "subtitles", "synchronization", "video"]
categories = ["multimedia"]

[dependencies]
srt-parser = { workspace = true }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[lib]
name = "srt_sync"
path = "src/lib.rs"
