[package]
name = "srt-translate"
version = "0.5.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Library for translating SRT subtitle files using LLM APIs (Gemini, OpenAI, local)"
license = "GPL-3.0"
repository = "https://github.com/pierspad/auto_sub_srt"
keywords = ["srt", "subtitles", "translation", "llm", "ai"]
categories = ["multimedia", "localization"]

[dependencies]
srt-parser = { workspace = true }
anyhow.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
governor = "0.6"
nonzero_ext = "0.3"
tokio-util = "0.7"

[lib]
name = "srt_translate"
path = "src/lib.rs"
