[package]
name = "whisper-common"
version = "0.13.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
dirs.workspace = true
hound.workspace = true
reqwest = { workspace = true, features = ["stream", "multipart"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
whisper-rs.workspace = true
futures.workspace = true
tokio-util = { version = "0.7" }
