[package]
name = "whisper-common"
version = "0.14.0-dev.4"
edition.workspace = true

[dependencies]
anyhow.workspace = true
dirs.workspace = true
hound.workspace = true
reqwest = { workspace = true, features = ["stream", "multipart"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
whisper-rs.workspace = true
futures.workspace = true
tokio-util = { version = "0.7" }
tempfile.workspace = true
