[package]
name = "vesta"
version = "0.14.0-dev.2"
edition.workspace = true
default-run = "vesta"
description = "Video Extraction, Sync & Translation for Anki"
authors = ["Pierpaolo Spadafora <pierpaolospadafora@proton.me>"]
license = "GPL-3.0-only"

[lib]
name = "vesta_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["protocol-asset"] }
tauri-plugin-shell = "2.3"
tauri-plugin-fs = "2.5"
tauri-plugin-http = "2.5"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
urlencoding = "2"
tempfile = "3"
dirs = "6"
srt-transcribe = { workspace = true }
ffmpeg-sidecar = { version = "2.5.1", features = ["download_ffmpeg"] }
sysinfo = "0.39"

# Dipendenze dal workspace
srt-parser = { workspace = true }
srt-translate = { workspace = true }
srt-sync = { workspace = true }
srt-autosync = { workspace = true }
srt-flashcards = { workspace = true }
srt-refine = { workspace = true }
srt-condense = { workspace = true }
srt-ankiconnect = { workspace = true }
axum = "0.8.9"
tower-http = { version = "0.7.0", features = ["cors", "fs"] }
tower = "0.5.3"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"
tauri-plugin-dialog = { version = "2.7", default-features = false, features = ["xdg-portal"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
tauri-plugin-dialog = "2.7"

[dev-dependencies]
sha2 = "0.11"
tokio = { version = "1.52", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# GPU offload (Vulkan) for local Whisper transcription.
vulkan = ["srt-transcribe/vulkan", "srt-condense/vulkan"]
