[package]
name = "whisper-bench"
version = "0.2.0"
edition.workspace = true
description = "Standalone Whisper transcription benchmark GUI. Ships CPU+Vulkan in-process and fetches CUDA/ROCm/SYCL worker binaries on demand based on detected hardware."
authors = ["Pierpaolo Spadafora <pierpaolospadafora@proton.me>"]
license = "GPL-3.0-only"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = "0.7"
tempfile = { workspace = true }
num_cpus = { workspace = true }
srt-transcribe = { workspace = true }
ffmpeg-sidecar = { version = "2.5.1", features = ["download_ffmpeg"] }
reqwest = { workspace = true, features = ["stream"] }
futures = { workspace = true }
sha2 = "0.11"
zip = "8"

# Same split as the main vesta app: portal-based dialogs on Linux.
[target.'cfg(target_os = "linux")'.dependencies]
tauri-plugin-dialog = { version = "2.7", default-features = false, features = ["xdg-portal"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
tauri-plugin-dialog = "2.7"

[features]
default = []
# The launcher itself only ever ships this: CPU always, Vulkan because a
# single build covers AMD/NVIDIA/Intel and doesn't carry heavy toolkits.
# CUDA/ROCm/SYCL are never compiled into the launcher — see `workers.rs`:
# they ship as separate single-backend `srt-transcribe` binaries (built by
# the same CI matrix that used to produce whole separate app bundles) that
# get downloaded on demand when matching hardware is detected.
vulkan = ["srt-transcribe/vulkan"]
